# tetrika-assignment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-check.yml
task1/: README.md  __init__.py  solution.py  subtask1.py  subtask2.py  subtask3.py
task1/tests/: __init__.py  test_subtask1.py  test_subtask2.py  test_subtask3.py
task2/: README.md  __init__.py  main.py  solution.py
task3/: README.md  __init__.py  solution.py
task3/tests/: __init__.py  test_solution.py
utils/: __init__.py  algorithms.py  geometry.py
utils/tests/: __init__.py  test_algorithms.py
