[tool.poetry]
name = "tetrika-assignment"
version = "0.1.0"
description = "Tetrika assignment."
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
beautifulsoup4 = "^4.11.1"
aiostream = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = "True"
